# trustlayer

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  SPEC.md
docs/: index.html
verifier-js/: README.md  index.js  package.json
verifier-js/lib/: canonical.js  did.js  verify.js
verifier-js/test/: verify.test.js
verifier-rs/: Cargo.toml  README.md  sample-bundle.json
verifier-rs/src/: canonical.rs  did.rs  lib.rs  main.rs  verify.rs
verifier-rs/tests/: verify.rs
